rtc includes and object initialization
- supposedly fixed mdns
- index and connect pages fix, preliminary post development
- removed inside folders .vscode

--- a/paginasWeb/index.html
+++ b/paginasWeb/index.html
@@ -38,10 +38,10 @@ h3{
 <h1>SmartBed</h1>
 <p>Your alarm is set to [placeholder]. Currently [placeholder on/off]</p>
 <h3>Configure your alarm</h3>
-<form action="https://lmgtfy.com/?q=voc%C3%AA+%C3%A9+um+bob%C3%A3o&s=g&iie=1" method="get">
+<form method="get">
 	<p>Set Status</p>
-	<input class="ckeckInput" type="radio" name="alarmStatus" value="on">On
-	<input class="ckeckInput" type="radio" name="alarmStatus"value="on">Off
+	<input class="checkInput" type="radio" name="alarmStatus" value="on">On
+	<input class="checkInput" type="radio" name="alarmStatus"value="on">Off
 	<h3>Time setup</h3>
 	<input class="timeInput" type="time" name="alarmTime">
 	<input class="sendButton" type="submit" value="Send">
